--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@emotion/styled": "^11.13.0",
     "@mui/base": "^5.0.0-beta.59",
     "@mui/icons-material": "^6.1.4",
+    "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.4",
     "@toolpad/core": "^0.7.0",
     "axios": "^1.7.7",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
+    "react-slick": "^0.30.2",
     "recharts": "^2.13.0",
+    "slick-carousel": "^1.8.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
