--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2",
+    "react-spinners": "^0.14.1",
     "recharts": "^2.13.0",
     "slick-carousel": "^1.8.1",
     "uuid": "^10.0.0"
